--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -93,10 +93,10 @@
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(self, config_filepath = CONFIG_FILE_PATH): #params_filepath = PARAMS_FILE_PATH):\n",
+    "    def __init__(self, config_filepath = CONFIG_FILE_PATH, params_filepath = PARAMS_FILE_PATH):\n",
     "\n",
     "        self.config = read_yaml(config_filepath)\n",
-    "        #self.params = read_yaml(params_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
