--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "    \n",
     "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
-    "        config = self.config#.data_ingestion\n",
+    "        config = self.config.data_ingestion\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
@@ -177,10 +177,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-16 17:27:32,805: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-06-16 17:27:32,805: INFO: common: created directory at: artifacts]\n",
-      "[2023-06-16 17:27:32,805: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-06-16 17:27:32,805: INFO: 1170291011: File already exists of size: ~ 11345 KB]\n"
+      "[2023-06-18 21:43:08,191: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-06-18 21:43:08,194: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-06-18 21:43:08,195: INFO: common: created directory at: artifacts]\n",
+      "[2023-06-18 21:43:08,196: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-06-18 21:43:08,197: INFO: 1170291011: File already exists of size: ~ 11345 KB]\n"
      ]
     }
    ],
