--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "\n",
     "    def get_prepare_base_model_config(self) -> PrepareBaseModelConfig:\n",
-    "        config = self.config\n",
+    "        config = self.config.prepare_base_model\n",
     "\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -221,17 +221,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-18 08:59:44,101: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-06-18 08:59:44,101: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-06-18 08:59:44,107: INFO: common: created directory at: artifacts]\n",
-      "[2023-06-18 08:59:44,109: INFO: common: created directory at: artifacts/prepare_base_model]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2023-06-18 08:59:44,927: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2023-06-18 21:44:12,846: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-06-18 21:44:12,849: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-06-18 21:44:12,851: INFO: common: created directory at: artifacts]\n",
+      "[2023-06-18 21:44:12,853: INFO: common: created directory at: artifacts/prepare_base_model]\n",
+      "[2023-06-18 21:44:13,764: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
@@ -282,7 +276,9 @@
       "Total params: 14,764,866\n",
       "Trainable params: 50,178\n",
       "Non-trainable params: 14,714,688\n",
-      "_________________________________________________________________\n"
+      "_________________________________________________________________\n",
+      "[2023-06-18 21:44:15,453: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "[2023-06-18 21:44:16,109: INFO: builder_impl: Assets written to: artifacts\\prepare_base_model\\base_model_updated.h5)\\assets]\n"
      ]
     }
    ],
